// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar integration test should flow: bookmarks button click 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "key": "BOOKMARKS",
          "payload": Object {
            "controller": "models",
          },
          "url": "/api/bookmarks?search=controller%3Dmodels&per_page=100",
        },
        "type": "API_GET",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "some-id": Object {
        "controller": "models",
        "disabled": false,
        "error": null,
        "isErrorVisible": false,
        "results": undefined,
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
        "url": "model/auto_complete_search",
      },
    },
    "bookmarks": Object {
      "currentQuery": "",
      "models": Object {
        "errors": null,
        "results": Array [],
        "status": "PENDING",
      },
      "showModal": false,
    },
  },
}
`;

exports[`SearchBar integration test should flow: in bookmarks dropdown: click on "bookmark this page" 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "query": "result",
        },
        "type": "BOOKMARKS_MODAL_OPENED",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "some-id": Object {
        "controller": "models",
        "disabled": false,
        "error": null,
        "isErrorVisible": false,
        "results": undefined,
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
        "url": "model/auto_complete_search",
      },
    },
    "bookmarks": Object {
      "currentQuery": "result",
      "models": Object {
        "errors": null,
        "results": Array [],
        "status": "PENDING",
      },
      "showModal": true,
    },
  },
}
`;
